--- a/axelor-sale/build.gradle
+++ b/axelor-sale/build.gradle
@@ -8,7 +8,7 @@ apply {
 
 axelor {
 	title "Axelor Sale"
-	description "Axelor Sale Module"
+	description "Axelor Sale Module test"
 }
 
 dependencies {
